--- a/config.toml
+++ b/config.toml
@@ -79,12 +79,12 @@ publishDir = "docs"
 
   [[params.services.item]]
     #icon = "icon-eye"
-    title = "Messung von Geräuschimmissionen"
+    title = "Geräuschimmissionsmessungen"
     description = "Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nam itaque ipsam iste provident quo ipsam iste provident."
 
   [[params.services.item]]
     #icon = "icon-paper-plane"
-    title = "Messung von Geräuschemissionen"
+    title = "Geräuschemissionsmessungen"
     description = "Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nam itaque ipsam iste provident quo ipsam iste provident."
 
   [[params.services.item]]
